feat: support CRUD actions for workspace, migrate old data (#165)
